# wmbench

./: .gitignore  LICENSE  README.md  pyproject.toml  wrangler.toml
.github/workflows/: pages.yml  tests.yml
.stubs/: decord.py
configs/: demo.yaml  invismark.yaml  pixelseal.yaml  trustmark.yaml  wam.yaml
scripts/: deploy.sh  run_all.sh
src/wmbench/: __init__.py  config.py  merge.py  runner.py
src/wmbench/algorithms/: __init__.py  _ecc.py  _torch_io.py  invismark_adapter.py  pixelseal_adapter.py  trustmark_adapter.py  wam_adapter.py
src/wmbench/core/: interfaces.py  registry.py
src/wmbench/distortions/: __init__.py  builtin.py
src/wmbench/metrics/: __init__.py  extraction.py  quality.py  tools.py
src/wmbench/report/: generate.py
src/wmbench/report/templates/: index.html.j2
tests/: conftest.py  test_adapters.py  test_core.py  test_merge.py  test_metrics.py  test_report.py  test_runner.py
